--- a/basic.css
+++ b/basic.css
@@ -16,7 +16,11 @@ html 				{font-family:'typori';font-size:20;background-image:url('ast/backdrop5.
 .indent				{margin-left: 30px;border-left:5px solid white;padding-left:10px;}
 .tab					{white-space: pre}
 
-#footer			{position:absolute;bottom:5px;}
+#footer			{position:relative;bottom:-1000;}
+
+.fade				{animation: fadeIn 3s}
+@keyframes fadeIn {0% { opacity: 0;color:cyan; } 100% { opacity: 1;color:white; }}
+
 
 /*Fonts*/
 @font-face 		{font-family:'Dreamscar';	src:url('fnt/Dreamscar.ttf') 			format('truetype');}
