--- a/basic.css
+++ b/basic.css
@@ -1,8 +1,10 @@
-html 				{font-family:'typori';font-size:20;background-image:url('ast/backdrop5.png');background-repeat:no-repeat;background-attachment:fixed;background-position:center;background-size:cover;color:white;}
+html 				{font-family:'typori';font-size:20;background-image:url('ast/backdrop6.png');background-repeat:no-repeat;background-attachment:fixed;background-position:center;background-size:cover;color:white;}
+body					{cursor:none;cursor: url("ast/cursor.png"), auto;}
 
 .heads 				{font-family:'venice';font-size:50;font-style:italic;}
 .headss 			{font-family:'venice';font-size:31;user-select:none;}
-.headssl			{font-family:'venice';font-size:31;user-select:none;}
+.headssl			{font-family
+						:'venice';font-size:31;user-select:none;}
 .headss:hover	{color:#dfbdf2;}
 .headsss			{font-family: 'bahnschrift';font-size:25}
 .subhead			{font-family:Typori;font-size:31}
@@ -16,7 +18,7 @@ html 				{font-family:'typori';font-size:20;background-image:url('ast/backdrop5.
 .indent				{margin-left: 30px;border-left:5px solid white;padding-left:10px;}
 .tab					{white-space: pre}
 
-#footer			{position:relative;bottom:-1000;}
+#footer			{position:fixed;bottom:0%;}
 
 .fade				{animation: fadeIn 3s}
 @keyframes fadeIn {0% { opacity: 0;color:cyan; } 100% { opacity: 1;color:white; }}
