--- a/basic.css
+++ b/basic.css
@@ -19,7 +19,7 @@ body					{cursor:none;cursor: url("ast/cursor.png"), auto;}
 .indent				{margin-left: 30px;border-left:5px solid white;padding-left:10px;}
 .tab					{white-space: pre}
 
-#footer			{position:fixed;bottom:0%;}
+#footer			{position:fixed;bottom:0%;background:#000000AA;width:100%}
 
 .fade				{animation: fadeIn 3s}
 @keyframes fadeIn {0% { opacity: 0;color:#F90010; } 100% { opacity: 1;color:white; }}
