--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 #containerdiv	{margin-top:15px;margin-bottom:-200;display:flex;justify-content:center;}
 .container		{border:2px solid white;border-radius:10px;margin-left:5px;margin-right:5px;padding:5px;}
 
-#barl 			{flex:2;width:20%;margin-right:1%;margin-left:1%;}
-#middle 		{flex:5;width:100%;padding:10px;border-left:0px solid white;border-right:0px solid white;}
+#barl 			{flex:2;width:20%;}
+#middle 		{flex:5;width:100%;height:100%;padding:10px;border-left:0px solid white;border-right:0px solid white;margin-bottom:40px;}
+#quote		{height:110px}
 
 header 			{border-bottom: 2px solid white;display:flex;justify-content:center;}
-#barr 			{flex:1;width:20%;margin-right:1%;margin-left:11%;display:flex;flex-direction:column;align-content:center;}
+#barr 			{flex:2;width:20%;display:flex;flex-direction:column;align-content:center;}
 
  #cheats		{border:2px solid lavender;background-color:black;color:lavender}
