--- a/53.css
+++ b/53.css
@@ -1,13 +1,13 @@
-html 				{font-family:'typori';font-size:20;background-image:url('ast/backdrop6.png');background-repeat:no-repeat;background-attachment:fixed;background-position:center;background-size:cover;color:white;
-						scrollbar-color:#706153 black;scrollbar-width:thin;}
+html 				{font-family:'';font-size:20;background-image:url('ast/');background-repeat:no-repeat;background-attachment:fixed;
+					background-position:center;background-size:cover;scrollbar-color:#706153 black;scrollbar-width:thin;}
 						
-body				{cursor:none;cursor: url("ast/cursor.png"), auto;}
+body				{display:flex;justify-content:center;
+					cursor:none;cursor: url("ast/cursor2.png"), auto;}
 
 .heads 				{font-family:'Times New Roman';font-size:50;font-style:italic;}
 .headss 			{font-family:'Times New Roman';font-size:26;user-select:none;}
 .headssl			{font-family:'Times New Roman';font-size:31;user-select:none;}
 .headss:hover		{color:#dfbdf2;}
-.headsss			{font-family: 'bahnschrift';font-size:25}
 .subhead			{font-family:Typori;font-size:31}
 
 .project 			{font-family:'bahnschrift';font-size:23;font-style:italic;}
